--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -53,7 +53,7 @@
                                             class="<%= items.myObject.login.form[i].icon %>"></i></span>
                                     <% } %>
                                 </div>
-                                <input type="<%= items.myObject.login.form[i].type %>" class="form-control"
+                                <input autocomplete="off" type="<%= items.myObject.login.form[i].type %>" class="form-control"
                                     placeholder="<%= items.myObject.login.form[i].placeholder %>"
                                     aria-label="<%= items.myObject.login.form[i].ariaLabel %>"
                                     aria-describedby="basic-addon1" name="<%= items.myObject.login.form[i].name %>"
