--- a/views/user/dashboard.ejs
+++ b/views/user/dashboard.ejs
@@ -1,3 +1,3 @@
 <h1 class="mt-4">Dashboard</h1>
-<p class="lead mb-3">Welcome <%= items.name %></p>
+<p class="lead mb-3">Welcome <%= items.rol %></p>
 <a href="/logout" class="btn btn-secondary">Logout</a>
