--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -42,6 +42,16 @@ body {
   font-weight: bold;
 }
 
+.nutrientesTitle{
+    font-size: 1.5em;
+    text-align: center;
+    font-weight: bold;
+
+}
+label {
+  font-weight: 550;
+}
+
 .jumbotron {
   /* background-color: rgba(172, 189, 186, 0.20); */
   background-image: url("../images/carousel.jpg");
