--- a/views/dish/insertDish.ejs
+++ b/views/dish/insertDish.ejs
@@ -69,8 +69,8 @@
                                                 class=" myIcons <%= items.myObject.dish.formIngredientes[i].icon %>"></i></span>
                                     </div>
                                     <% if (items.myObject.dish.formIngredientes[i].label === "Cantidad") { %>
-                                    <input class="MyInputs"
-                                        type="<%= items.myObject.dish.formIngredientes[i].type %>" class="form-control"
+                                    <input class="MyInputs" type="<%= items.myObject.dish.formIngredientes[i].type %>"
+                                        class="form-control"
                                         placeholder="<%= items.myObject.dish.formIngredientes[i].placeholder %>"
                                         aria-label="<%= items.myObject.dish.formIngredientes[i].ariaLabel %>"
                                         aria-describedby="basic-addon1"
@@ -109,7 +109,7 @@
                         </div>
                     </div>
 
-                    <input type="button"  class="btn btn-dark" value="Añadir ingrediente" id="bSubmit">
+                    <input type="button" class="btn btn-dark" value="Añadir ingrediente" id="bSubmit">
                 </div>
 
                 <script>
@@ -121,7 +121,7 @@
                         const myLabels = document.querySelectorAll(".myLabels");
                         const myIcons = document.querySelectorAll(".myIcons");
                         const selects = document.querySelectorAll(".mySelects")
-            
+
                         createNewInputs(inputs, myLabels, myIcons, selects);
                     });
 
@@ -134,8 +134,8 @@
                             const aLabel = document.createElement("LABEL");
                             console.log(myLabels[i].innerHTML)
                             aLabel.innerHTML = myLabels[i].innerHTML;
-                            
-                            
+
+
                             col.appendChild(aLabel);
 
                             const divInputGroup = document.createElement("DIV");
@@ -150,62 +150,82 @@
 
                             let icon = document.createElement("ICON");
 
-                      
+
                             for (let j = 0; j < myIcons[i].classList.length; j++) {
-                                icon.classList.value += myIcons[i].classList[j] + " ";                 
+                                icon.classList.value += myIcons[i].classList[j] + " ";
                             }
-                        
+
                             spanIcon.appendChild(icon);
                             divInputGroupPrepend.appendChild(spanIcon);
                             divInputGroup.appendChild(divInputGroupPrepend);
 
                             if (i <= 1) {
                                 const newI = document.createElement("INPUT");
-                             
+
                                 newI.setAttribute("type", inputs[i].type);
                                 newI.setAttribute("placeholder", inputs[i].placeholder);
                                 newI.setAttribute("name", inputs[i].name);
-                                if (inputs[i].name === "ingredients[]"){
+                                if (inputs[i].name === "ingredients[]") {
                                     newI.classList.add("searchIngredient");
                                 }
-                                if (inputs[i].name === "cantidades[]"){
+                                if (inputs[i].name === "cantidades[]") {
                                     newI.setAttribute("min", inputs[i].min);
                                 }
-                                
+
                                 newI.classList.add("form-control");
                                 newI.classList.add("ui-autocomplete-input");
                                 divInputGroup.appendChild(newI);
                                 col.appendChild(divInputGroup);
                                 col.classList.add("col-sm");
                                 divRow.appendChild(col);
-                                
-                        
+
+
                             } else {
-                                
+
                                 const newS = document.createElement("SELECT");
                                 newS.setAttribute("name", selects[k].name);
                                 console.log(selects[k].name)
                                 const optS = document.createElement("OPTION");
-                                optS.value =  selects[k].options[0].value;
-                                optS.innerHTML =  selects[k].options[0].value;
-                               
+                                optS.value = selects[k].options[0].value;
+                                optS.innerHTML = selects[k].options[0].value;
+
                                 newS.appendChild(optS);
                                 const optS2 = document.createElement("OPTION");
-                                optS2.value =  selects[k].options[1].value;
-                                optS2.innerHTML =  selects[k].options[1].value;
+                                optS2.value = selects[k].options[1].value;
+                                optS2.innerHTML = selects[k].options[1].value;
                                 newS.appendChild(optS2);
                                 newS.classList.add("form-control");
                                 divInputGroup.appendChild(newS);
                                 col.appendChild(divInputGroup);
                                 col.classList.add("col-sm");
                                 divRow.appendChild(col);
-                              
+
                                 k++;
                             }
                         }
-                      
+                        const col = document.createElement("DIV");
+                        col.classList.add("col-sm");
+                        const eliminar = document.createElement("INPUT");
+                        eliminar.classList.add("btn");
+                        eliminar.classList.add("btn-danger");
+                        eliminar.classList.add("eliminar");
+                        eliminar.setAttribute("type", "button");
+                        eliminar.value ="Eliminar"
+                        col.style.display="flex";
+                        col.style["align-items"]= "center";
+                        col.style["padding-top"]= "12px";
+                        col.appendChild(eliminar)
+                        divRow.appendChild(col);
+
+                        
                         divRow.classList.add("row");
                         padre.appendChild(divRow);
+
+                        $("form").on("click", ".eliminar", function (e) {
+                            var targets = $(this).closest(".row");
+                            $(targets).remove();
+                        });
+                   
                     };
 
 
@@ -247,7 +267,7 @@
                         })
                     });
                 </script>
-                 <script>
+                <script>
                     $("#bSubmit").on("click", () => {
                         $(".searchIngredient").autocomplete({
                             source: function (req, res) {
