--- a/public/stylesheets/dish.css
+++ b/public/stylesheets/dish.css
@@ -78,6 +78,16 @@ h1{
   border: 2px solid grey;
   background-image:  radial-gradient(ellipse at center, rgb(255, 255, 255) 0%, rgb(253, 250, 250) 100%);
   padding: 20px;
+  padding-bottom: 0px;
+
+}
+
+.cardInsideVal{
+  box-shadow: 10px 10px 5px 0px rgba(170, 167, 167, 0.6);
+  border: 3px solid #17a2b8;
+  background-image:  radial-gradient(ellipse at center, rgb(255, 255, 255) 0%, rgb(226, 255, 255) 80%);
+  padding: 20px;
+
 
 }
 
