--- a/views/evaluation/getEvaluation.ejs
+++ b/views/evaluation/getEvaluation.ejs
@@ -85,14 +85,9 @@
                             <% } else{ %>
                                 <td class="text-success"> <%= items.myDocs[i].resultados[0]["carbohidratos"][0] %> <br><%= items.myDocs[i].resultados[0]["carbohidratos"][1] %>  </td>
                                 <% } %>
-                          
-                           
-                        
-                           
                 
-                            <td> <button type="button" class="btn btn-danger"><a title="Eliminar" href="/recomendation/delete/<%=items.myDocs[i]['_id']%>"> <i class="fas fa-trash-alt"></i></a></button><br> 
-                                <button type="button" class="btn btn-info"><a title="Ver detalles"  href="/recomendation/<%=items.myDocs[i]['_id']%>"><i class="fas fa-search-plus"></i></a></button> 
-                                <button type="button" class="btn btn-warning"><a title="Editar" href="/recomendation/update/<%=items.myDocs[i]['_id']%>"><i class="fas fa-edit"></i></a></button></td> 
+                            <td> <button type="button" class="btn btn-danger"><a title="Eliminar" href="/evaluation/delete/<%=items.myDocs[i]['_id']%>"> <i class="fas fa-trash-alt"></i></a></button>
+                               
                             </td>
                         </tr>
                         <% } %>
